Agentforce/force-app/main/default/objects/Framework_Agreement__c/Framework_Agreement__c.object-meta.xml
<CustomObject>
    <label>Framework Agreement</label>
    <nameField>
        <displayFormat>FW-{00000}</displayFormat>
        <label>Framework Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>