Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AD-56 Framework Agreement</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Framework Agreements</relationshipLabel>
    <relationshipName>Framework_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>