Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>