Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Count_of_Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Active Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>