Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Framework_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Framework_Agreement__c</fullName>
    <description>Text field used to set the framework agreement name; Account - Frameworks - Autonumber</description>
    <label>Framework Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>