Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Framework_Agreement_Formula__c.field-meta.xml
<CustomField>
    <fullName>Framework_Agreement_Formula__c</fullName>
    <description>Formula field to transform the Framework Agreement text field to a hyperlink</description>
    <formula>HYPERLINK(Id,  Framework_Agreement__c ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Framework Agreement</label>
    <type>Text</type>
</CustomField>