Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Frameworks_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Frameworks_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Frameworks Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Framework Agreements</relationshipLabel>
    <relationshipName>Framework_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>