Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Framework Agreements</relationshipLabel>
    <relationshipName>Framework_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>