Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Lot_No__c</fullName>
    <label>Lot No</label>
    <length>35</length>
    <type>Text</type>
</CustomField>