Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <formula>text(Account__r.Owner.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>