Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Owner_Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Corporate_Type__c</fullName>
    <formula>text(Account__r.Owner.Corporate_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Corporate Type</label>
    <type>Text</type>
</CustomField>