Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>text(Account__r.Owner.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>