Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>England - North</fullName>
            </value>
            <value>
                <fullName>England - East</fullName>
            </value>
            <value>
                <fullName>England - South</fullName>
            </value>
            <value>
                <fullName>England - West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>