Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biomedical Management Services</fullName>
            </value>
            <value>
                <fullName>Hard Services</fullName>
            </value>
            <value>
                <fullName>Car Park Management</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>CCTV Installations</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Compliance Services</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Soft Services</fullName>
            </value>
            <value>
                <fullName>Horticulture</fullName>
            </value>
            <value>
                <fullName>Industrial Painting</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Management Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting</fullName>
            </value>
            <value>
                <fullName>TFM</fullName>
            </value>
            <value>
                <fullName>VAS Specialized Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>