Agentforce/force-app/main/default/objects/Framework_Agreement__c/fields/Won_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunity_Value__c</fullName>
    <label>Won Opportunity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>