Agentforce/force-app/main/default/objects/Framework_Agreement__c/validationRules/Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c, Start_Date__c  &gt;  End_Date__c )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Agreement Start Date must be before the Agreement End Date</errorMessage>
</ValidationRule>