Agentforce/force-app/main/default/objects/Framework_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>